--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,106 @@
 @import 'reset';
 @import 'global';
 
+.header {
+  padding: 50px 0 55px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.menu {
+  align-items: center;
+  display: flex;
+  &__list {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    right: 0;
+    left: 0;
+  }
+  &__list-item+.menu__list-item {
+    padding-left: 35px;
+  }
+  &__list-link {
+    color: $accent-light;
+    @extend %rubik-500;
+    font-size: 15px;
+  }
+}
+
+.user-nav {
+  display: flex;
+  width: 320px;
+  justify-content: space-between;
+  &__link {
+    position: relative;
+  }
+  &__inner-search {
+    background-color: #edf1f4;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    padding: 17.5px;
+    position: relative;
+    &::before {
+      content: '';
+      height: 30px;
+      width: 1px;
+      background-color: #fde7d3;
+      position: absolute;
+      top: 10px;
+      left: 160px;
+      z-index: 2;
+    }
+  }
+  &__inner-shop {
+    display: flex;
+    width: 130px;
+    justify-content: space-between;
+    background-color: #fcd7b6;
+    padding: 16.5px 15px;
+    position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      background-color: #fcd7b6;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      top: 0;
+    }
+    &::before {
+      left: -25px;
+    }
+    &::after {
+      right: -25px;
+      z-index: -1;
+    }
+  }
+  &__inner-user {
+    background-color: #a3bbc8;
+    width: 50px;
+    border-radius: 50%;
+    padding: 15px 15px
+  }
+  &__num {
+    @extend %dmsans-400;
+    font-size: 10px;
+    line-height: 15px;
+    text-align: center;
+    position: absolute;
+    color: $accent;
+    height: 15px;
+    width: 15px;
+    background-color: #fff;
+    border-radius: 50%;
+    top: -7px;
+    right: -8px;
+  }
+}
 
 
 @import 'media';
-
