--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -29,6 +29,17 @@
     color: $accent-light;
     @extend %rubik-500;
     font-size: 15px;
+    &:hover{
+      font-weight: bold;
+      padding-bottom: 2px;
+      border-bottom: 1px solid $accent-light;
+      transition: all .3s;
+    }
+  }
+  &__list-link--active{
+    font-weight: bold;
+    padding-bottom: 2px;
+    border-bottom: 1px solid $accent-light;
   }
 }
 
