--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -57,16 +57,6 @@
     border-radius: 50%;
     padding: 17.5px;
     position: relative;
-    &::before {
-      content: '';
-      height: 30px;
-      width: 1px;
-      background-color: #fde7d3;
-      position: absolute;
-      top: 10px;
-      left: 160px;
-      z-index: 2;
-    }
   }
   &__inner-shop {
     display: flex;
@@ -93,6 +83,15 @@
       z-index: -1;
     }
   }
+  &__shop-line{
+      height: 30px;
+      width: 1px;
+      background-color: #fde7d3;
+      position: absolute;
+      top: 10px;
+      right: 65px;
+      z-index: 2;
+    }
   &__inner-user {
     background-color: #a3bbc8;
     width: 50px;
