--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,12 +1,36 @@
+html,
+body {
+  height: 100%;
+}
+
 body{
   font-size: 16px;
   line-height: 30px;
   color: $default;
   @extend %rubik-400;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
+}
+
+.container-lg{
+  max-width: 1800px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .container{
-  max-width: 1740px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+a {
+  color: $default;
+  font-size: 14px;
+  line-height: 20px;
+  @extend %rubik-400;
 }
