--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,7 @@
 
 .header {
   padding: 50px 0 55px;
+
   &__inner {
     display: flex;
     justify-content: space-between;
@@ -15,6 +16,7 @@
 .menu {
   align-items: center;
   display: flex;
+
   &__list {
     display: flex;
     justify-content: center;
@@ -22,21 +24,25 @@
     right: 0;
     left: 0;
   }
+
   &__list-item+.menu__list-item {
     padding-left: 35px;
   }
+
   &__list-link {
     color: $accent-light;
     @extend %rubik-500;
     font-size: 15px;
-    &:hover{
+
+    &:hover {
       font-weight: bold;
       padding-bottom: 2px;
       border-bottom: 1px solid $accent-light;
       transition: all .3s;
     }
   }
-  &__list-link--active{
+
+  &__list-link--active {
     font-weight: bold;
     padding-bottom: 2px;
     border-bottom: 1px solid $accent-light;
@@ -47,9 +53,11 @@
   display: flex;
   width: 320px;
   justify-content: space-between;
+
   &__link {
     position: relative;
   }
+
   &__inner-search {
     background-color: #edf1f4;
     width: 50px;
@@ -58,6 +66,7 @@
     padding: 17.5px;
     position: relative;
   }
+
   &__inner-shop {
     display: flex;
     width: 130px;
@@ -65,6 +74,7 @@
     background-color: #fcd7b6;
     padding: 16.5px 15px;
     position: relative;
+
     &::before,
     &::after {
       content: '';
@@ -75,29 +85,34 @@
       border-radius: 50%;
       top: 0;
     }
+
     &::before {
       left: -25px;
     }
+
     &::after {
       right: -25px;
       z-index: -1;
     }
   }
-  &__shop-line{
-      height: 30px;
-      width: 1px;
-      background-color: #fde7d3;
-      position: absolute;
-      top: 10px;
-      right: 65px;
-      z-index: 2;
-    }
-  &__inner-user {
-    background-color: #a3bbc8;
+
+  &__shop-line {
+    height: 30px;
+    width: 1px;
+    background-color: #fde7d3;
+    position: absolute;
+    top: 10px;
+    right: 65px;
+    z-index: 2;
+  }
+
+  &__inner-dots {
+    background-color: $btn;
     width: 50px;
     border-radius: 50%;
     padding: 15px 15px
   }
+
   &__num {
     @extend %dmsans-400;
     font-size: 10px;
@@ -113,6 +128,102 @@
     right: -8px;
   }
 }
+
+.footer-top {
+  padding: 80px 0 70px;
+  display: flex;
+  border-bottom: 1px solid #dae4e9;
+
+  &__contact {
+    width: 200px;
+    margin-right: 100px;
+  }
+
+  &__nav {
+    width: 170px;
+    margin-right: 130px;
+  }
+
+  &__item-form {
+    max-width: 270px;
+  }
+  &__logo {
+    margin-bottom: 27px;
+    display: block;
+  }
+  &__address,
+  &__email,
+  &__phone {
+    display: block;
+    margin-bottom: 16px;
+  }
+  &__title {
+    color: #1f2044;
+    @extend %dmsans-700;
+    margin: 20px 0 20px;
+    font-size: 16px;
+    line-height: 1;
+  }
+  &__link {
+    margin-bottom: 12px;
+    display: block;
+  }
+  &__text {
+    margin-bottom: 37px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  &__form{
+    display: flex;
+  }
+  &__form-input {
+    background-color: $bg;
+    max-width: 170px;
+    width: 100%;
+    border: none;
+    padding: 4px 16px;
+    &::placeholder {
+      color: #234969;
+      font-size: 12px;
+    }
+  }
+  &__form-btn {
+    border: none;
+    background-color: $btn;
+    color: #fff;
+    padding: 4px 16px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+}
+
+.footer-bottom{
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  &__list{
+    display: flex;
+  }
+  &__item{
+    line-height: 1;
+    padding-right: 15px;
+    &:last-child {
+      padding-right: 0;
+    }
+  }
+  &__item+.footer-bottom__item {
+    padding-left: 15px;
+    border-left: 1px solid $default;
+  }
+}
+
+
+
+
+
+
+
 
 
 @import 'media';
