top-slider section

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,7 +1,8 @@
 $default: #7b7b7b;
 $accent-light: #436372;
 $accent: #243f4d;
-$bg: #fef7f0;
+$bg: #fcd7b6;
+$bg-form: #fef7f0;
 $btn: #a3bbc8;
 
 %dmsans-400 {
