--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -336,10 +336,11 @@ ul.slick-dots {
 }
 
 .product{
+  margin-bottom: 185px;
   &__filter-btn{
     text-align: center
   }
-  &__btn{
+  &__btn {
     background-color: transparent;
     border: none;
     margin: 20px 0 80px;
@@ -416,8 +417,111 @@ ul.slick-dots {
   
 }
 
+.offer{
+  &__items{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  &__item{
+    background-color: #feefe2;
+    padding: 90px 130px 95px 385px;
+    position: relative;
+    color: $accent;
+    &-img{
+      position: absolute;
+      bottom: 80px;
+      left: 120px;
+    }
+    &-title{
+      @extend %dmsans-700;
+      font-size: 26px;
+      padding-bottom: 25px;
+      line-height: 14px
+    }
+    &-text{
+      padding-bottom: 30px;
+    }
+    &-btn{
+      border: 1px solid #b3b7b5;
+      color: $accent-light;
+      background-color: transparent;
+      border-radius: 5px;  
+      padding: 20px 85px 20px 20px;
+      position: relative;
+      @extend %rubik-500;
+    }
+    svg {
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+  &__item+.offer__item{
+    margin-left: 30px;
+  }
+}
 
+.design{
+  margin-bottom: 120px;
+  &__filter-btn{
+    text-align: center
+  }
+  &__btn {
+    background-color: transparent;
+    border: none;
+    margin: 20px 0 80px;
+    color: $default;
+    @extend %dmsans-700;
+  }
+  &__items{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 30px;
+  }
+  &__item{
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    padding: 35px 0px 30px 40px;
+    position: relative;
+    height: 245px;
+    &-title{
+      @extend %dmsans-700;
+      font-size: 20px;
+      line-height: 22px;
+      color: #191919;
+      width: 180px;
+      position: absolute;
+      top: 40px;
+      left: 35px;
+    }
+    &-price {
+      @extend %dmsans-700;
+      font-size: 16px;
+      color: $btn;
+      position: absolute;
+      top: 95px;
+      left: 35px;
+    }
+  }
+  
+}
 
+.video-play{
+  background-image: url(../images/top-slider.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  &__popup {
+    height: 500px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 
 
