--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -44,3 +44,32 @@ a {
 button.mixitup-control-active {
   color: #191919;
 }
+
+.breadcrumbs {
+  display: inline-flex;
+  justify-content: center;
+  &__list{
+    display: flex;
+  }
+  &__item{
+    padding-right: 15px;
+    position: relative;
+    &::after {
+      content: '/';
+      position: absolute;
+      font-size: 14px;
+      right: 4px;
+      top: 1px;
+    }
+
+    &:last-child {
+      color: $accent;
+      padding-right: 0;
+
+      &::after {
+        display: none;
+      }
+    }
+  }
+}
+ 
