--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -73,4 +73,37 @@ button.mixitup-control-active {
     }
   }
 }
+
+.pagination{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 65px;
+  .pagination__list {
+    display: flex;
+  }
+  &__link{
+    color: $accent;
+    line-height: 0;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid $btn;
+    margin-right: 15px;
+    &.pagination__link--active {
+      background-color: $btn;
+      color: #fff;
+    }
+  }
+  &__next{
+    height: 50px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    border: 1px solid $btn;
+    color: $accent;
+  }
+}
  
