--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -217,13 +217,13 @@
 .top {
   text-align: center;
   background-color: #edf1f4;
+  padding: 30px 0 25px;
 
   &__title {
     font-size: 36px;
     @extend %rubik-300;
     color: #222933;
-    padding-top: 30px;
-    padding-bottom: 6px;
+    padding-bottom: 10px;
   }
 }
 
@@ -388,6 +388,124 @@ ul.slick-dots {
     justify-content: flex-end;
     position: relative;
     height: 425px;
+    width: 260px;
+    &-star{
+      display: none;
+    }
+    &-text{
+      display: none;
+    }
+    &-price--list{
+      display: none;
+    }
+    &-btn{
+      display: none;
+    }
+
+    &.product__item--list {
+      box-shadow: none;
+      display: flex;
+      flex-direction: unset;
+      text-align: left;
+      align-items: flex-start;
+      justify-content: flex-start;
+      padding: 0;
+      height: 500px;
+
+      &:nth-child(n+5){
+        display: none;
+      }
+
+      .product__item-img {
+        margin: 0;
+      }
+      .product__item-tool {
+        opacity: 1;
+      }
+      .product__item-imgbox{
+        width: 370px;
+        height: 500px;
+        border: 1px solid #f2f2f2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 55px;
+      }
+      .product__item-textbox{
+        color: $accent;
+        .product__item-title{
+          font-size: 40px;
+          padding: 90px 0 20px;
+          @extend %rubik-400;
+          color: #333;
+        }
+        .product__item-price{
+          font-size: 30px;
+          color: $accent;
+          padding: 25px 0 20px;
+          @extend %rubik-400;
+          color: #333;
+          &--list{
+            display: block;
+            
+          }
+          &--default{
+            display: none;
+          }
+        }
+        .product__item-star{
+          display: block;
+          svg{
+            width: 20px;
+            height: 20px;
+          }
+        }
+        .product__item-text{
+          display: inline-block;
+          width: 440px;
+        }
+        .product__item-btn {
+          display: block;
+          position: absolute;
+          left: 430px;
+          bottom: 70px;
+          z-index: 5;
+          border: none; 
+          background-color: $btn;
+          text-transform: uppercase;
+          color: #fff;
+          padding: 18px 50px;
+          line-height: 1;
+          border-radius: 5px;
+          cursor: pointer;
+          outline: none;
+          &.product__item-btn--active{
+            display: none;
+          }
+        }
+      }
+      .product__item-tools{
+        left: 430px;
+        bottom: 70px;
+        .product__item-cart{
+          background-color: $btn;
+          color: #fff;
+          path{
+            fill: #fff;
+          }
+        }
+        .product__item-tool {
+          border-radius: 0;
+          &:first-child{
+            display: none;
+          }
+          &:nth-child(2){
+            margin-left: 0;
+          }
+        }
+      }
+      
+    }
 
     &:hover .product__item-tool {
       opacity: 1;
@@ -425,6 +543,7 @@ ul.slick-dots {
       cursor: pointer;
       opacity: 0;
       transition: all .5s;
+      outline: none;
 
       &:nth-child(1),
       &:nth-child(2),
@@ -830,6 +949,7 @@ ul.slick-dots {
   &__item {
     text-align: center;
     color: $accent;
+
     &-img {
       display: flex;
       height: 64px;
@@ -839,6 +959,7 @@ ul.slick-dots {
       align-items: center;
       justify-content: space-around;
       z-index: 1;
+
       &::after {
         content: '';
         width: 35px;
@@ -851,11 +972,13 @@ ul.slick-dots {
         z-index: -1;
       }
     }
+
     &-nmb {
       @extend %dmsans-700;
       font-size: 36px;
       padding-top: 20px;
     }
+
     p {
       font-size: 18px;
       padding-top: 15px;
@@ -863,43 +986,52 @@ ul.slick-dots {
   }
 }
 
-.team{
+.team {
   padding: 120px 0 110px;
-  &__inner{
+
+  &__inner {
     display: flex;
     justify-content: space-between;
   }
-  &__info{
+
+  &__info {
     max-width: 300px;
   }
-  &__title{
+
+  &__title {
     text-align: left;
     padding-bottom: 25px;
     margin-top: 0;
   }
-  &__text{
+
+  &__text {
     padding-bottom: 65px;
     color: $accent;
   }
-  &__link{
+
+  &__link {
     background-color: $btn;
     color: #fff;
     @extend %poppins-700;
     padding: 15px 25px 15px 15px;
     border-radius: 5px;
-    svg{
+
+    svg {
       margin-left: 15px;
     }
   }
-  &__items{
+
+  &__items {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 40px 30px;
   }
-  &__item{
+
+  &__item {
     position: relative;
     box-shadow: 0px 6px 57px 0px rgba(37, 37, 37, 0.05);
+
     &-link--instagram,
     &-link--google {
       width: 41px;
@@ -912,18 +1044,22 @@ ul.slick-dots {
       background-position: center center;
       display: block;
     }
+
     &-link--instagram {
       background-image: url(../images/icons/instagram.svg);
       right: 115px;
     }
+
     &-link--google {
       background-image: url(../images/icons/google.svg);
       right: 65px;
     }
-    &-img{
+
+    &-img {
       background-color: #fff;
     }
-    &-title{
+
+    &-title {
       @extend %dmsans-700;
       font-size: 22px;
       color: $accent;
@@ -935,31 +1071,315 @@ ul.slick-dots {
       left: 0;
       background-color: #fff;
     }
-    &-subtitle{
+
+    &-subtitle {
       color: #565872;
       padding: 5px 0px 25px 25px;
     }
   }
 }
 
-.terms{
+.terms {
   color: $accent;
   padding: 55px 0 100px;
-  &__title{
+
+  &__title {
     @extend %rubik-500;
     font-size: 24px;
     padding-top: 60px;
   }
-  &__item{
+
+  &__item {
     list-style-type: decimal-leading-zero;
     padding-top: 15px;
     margin-left: 30px;
     padding-left: 5px;
   }
-  &__text{
+
+  &__text {
     padding-top: 10px;
   }
 }
 
-@import 'media';
+.products {
+  padding: 120px 0;
 
+  &__inner {
+    display: flex;
+  }
+
+  &__filter {
+    min-width: 270px;
+    margin-right: 30px;
+  }
+}
+
+.filter {
+  &__item {
+    margin-bottom: 60px;
+  }
+
+  &__filter-head {}
+
+  &__title {
+    text-transform: uppercase;
+    color: $accent;
+    font-size: 18px;
+    line-height: 1;
+    @extend %dmsans-700;
+    margin-bottom: 30px;
+    display: inline-block;
+    margin-right: 15px;
+  }
+
+  &__title-line {
+    width: 38px;
+    height: 3px;
+    background-color: $btn;
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+}
+
+.filter-category {
+  &__label {
+    display: block;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-category__checkbox {
+      background-color: #edf1f4;
+      border-radius: 5px;
+    }
+  }
+
+  &__checkbox {
+    background: transparent;
+    padding: 10px 20px 10px 15px;
+    color: $accent;
+  }
+
+  &__text {
+    position: relative;
+
+    &::after {
+      content: '';
+      width: 5px;
+      height: 10px;
+      position: absolute;
+      background-image: url(../images/icons/arrow-right.svg);
+      right: 0;
+      top: 10px;
+      z-index: 5;
+    }
+  }
+}
+
+.filter-price {
+  &__text {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    color: $accent;
+    line-height: 1;
+  }
+}
+
+.irs--flat .irs-line {
+  top: 9px;
+  height: 3px;
+  background-color: #c2d2db;
+  border-radius: 0px;
+}
+
+.irs--flat .irs-handle {
+  top: 3px;
+  width: 15px;
+  height: 15px;
+  background-color: $btn;
+}
+
+.irs--flat .irs-handle>i:first-child {
+  display: none;
+}
+
+.irs--flat .irs-bar {
+  top: 9px;
+  height: 4px;
+  background-color: $btn;
+}
+
+.irs-from,
+.irs-to,
+.irs-single {
+  display: none;
+}
+
+.irs--flat .irs-min,
+.irs--flat .irs-max {
+  display: none;
+}
+
+.irs--flat {
+  height: 30px;
+}
+
+.filter-brand {
+  &__label {
+    display: block;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-brand__checkbox {
+      background-color: #edf1f4;
+      border-radius: 5px;
+      color: $accent;
+    }
+  }
+
+  &__checkbox {
+    background: transparent;
+    padding: 10px 20px 10px 15px;
+    color: #b3b3b3;
+    display: flex;
+    justify-content: space-between;
+
+    &-text {
+      color: $accent;
+    }
+  }
+}
+
+.filter-recent {
+  &__img {
+    margin-right: 20px;
+    width: 70px;
+    height: 70px;
+    border: 3px solid #f2f2f2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__item {
+    display: flex;
+    font-size: 14px;
+    line-height: 22px;
+    color: #333;
+    margin-bottom: 25px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__title {
+    padding-bottom: 5px;
+  }
+
+  &__price {
+    padding-top: 5px;
+    font-size: 15px;
+  }
+}
+
+.jq-ry-container {
+  padding: 0;
+}
+
+.products-content {
+  width: 100%;
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    &.products-content__inner--list {
+      display: block;
+
+      .product__item--list {
+        width: 100%;
+      }
+    }
+  }
+
+  &__filter {
+    border: 1px solid #ececec;
+    padding: 20px 25px 20px 30px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__filter-buttons {
+    display: flex;
+    align-items: center;
+  }
+
+  &__filter-btn {
+    outline: none;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    margin-left: 15px;
+    line-height: 0;
+    cursor: pointer;
+
+    &.products-content__filter-btn--active {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+
+  .product__item {
+    width: 270px;
+    margin-bottom: 40px;
+  }
+}
+
+.jq-selectbox__select {
+  margin-left: 30px;
+  height: 32px;
+  padding: 0 30px 0 0;
+  border: none;
+  background: transparent;
+  box-shadow: none;
+  color: $default;
+  text-shadow: none;
+
+  &:hover {
+    background: transparent;
+  }
+}
+
+.jq-selectbox__trigger {
+  border-left: none;
+}
+
+.jq-selectbox__trigger-arrow {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 10px;
+  height: 5px;
+  border: none;
+  background-image: url(../images/icons/angle-down.svg);
+}
+
+
+@import 'media';
