--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -480,7 +480,7 @@ ul.slick-dots {
           cursor: pointer;
           outline: none;
           &.product__item-btn--active{
-            display: none;
+            opacity: 0;
           }
         }
       }
@@ -1379,6 +1379,166 @@ ul.slick-dots {
   height: 5px;
   border: none;
   background-image: url(../images/icons/angle-down.svg);
+}
+
+.product-page{
+  padding: 120px 0;
+}
+
+.product-one {
+  &__inner {
+    display: flex;
+  }
+
+  &__slide {
+    width: 550px;
+    margin-right: 70px;
+  }
+
+  &__content {
+    width: 550px;
+  }
+
+  &__title {
+    margin-bottom: 25px;
+    font-size: 40px;
+    color: #333;
+  }
+  &__price {
+    font-size: 30px;
+    color: #333;
+    margin-bottom: 30px;
+  }
+
+  &__item-star {
+    margin-bottom: 40px;
+  }
+
+  &__item-text {
+    margin-bottom: 30px;
+    color: $accent;
+  }
+
+  &__item-btn {
+    border: none;
+    margin-left: 15px;
+    cursor: pointer;
+    margin-bottom: 50px;
+    padding: 20px 50px;
+    line-height: 1;
+    color: #fff;
+    background-color: $btn;
+    text-transform: uppercase;
+    border-radius: 5px;
+  }
+}
+
+.product-info{
+  &__item{
+    display: flex;
+    color: $accent;
+  }
+  &__title{
+    margin-right: 5px;
+  }
+}
+
+.product-slide {
+  display: flex;
+
+  .slick-vertical .slick-slide {
+    height: 160px;
+    margin-bottom: 20px;
+  }
+
+  .slick-list{
+    height: auto !important;
+  }
+  
+  &__thumb {
+    width: 135px;
+    margin-right: 30px;
+  }
+
+  &__thumb-item {
+    cursor: pointer;
+    border: 2px solid #f2f2f2;
+    img {
+      width: 135px;
+      height: 160px;
+      object-fit: cover;
+    }
+  }
+
+  &__big {
+    width: 385px;
+    height: 525px;
+    border: 2px solid #f2f2f2;
+    img {
+      object-fit: cover;
+    }
+  }
+}
+
+.jq-number__field {
+  width: 150px;
+  border: 1px solid $btn;
+}
+
+.jq-number__field input {
+  width: 100%;
+  height: 50px;
+  border: none;
+  outline: none;
+  color: $accent;
+  text-align: center;
+}
+
+.jq-number {
+  padding: 0;
+  position: relative;
+}
+
+.jq-number__spin {
+  position: absolute;
+  cursor: pointer;
+  width: 50px;
+  height: 53px;
+  border: 1px solid $btn;
+}
+
+.jq-number__spin.minus {
+  left: 0px;
+  bottom: 0;
+  top: 0;
+}
+
+.jq-number__spin.plus {
+  right: 0px;
+  bottom: 0;
+  top: 0;
+}
+
+.jq-number__spin::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: $accent;
+  width: 8px;
+  height: 1px;
+}
+
+.jq-number__spin.plus::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%);
+  background-color: $accent;
+  width: 1px;
+  height: 8px;
 }
 
 
