--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -494,11 +494,14 @@ ul.slick-dots {
       .product__item-tools {
         left: 430px;
         bottom: 70px;
+
         .product__item-tool {
           border-radius: 0;
+
           &:first-child {
             display: none;
           }
+
           &:nth-child(2) {
             margin-left: 0;
           }
@@ -1763,8 +1766,8 @@ ul.slick-dots {
   &__input {
     border: 1px solid #edf1f4;
     border-radius: 5px;
-    border-top-right-radius: 0px ;
-    border-bottom-right-radius: 0px ;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
     padding: 0 10px;
     height: 40px;
     width: 220px;
@@ -1820,9 +1823,10 @@ ul.slick-dots {
 }
 
 .blog-one {
-  &__content{
+  &__content {
     max-width: 830px;
   }
+
   &__item {
     h2 {
       font-size: 36px;
@@ -1926,60 +1930,73 @@ ul.slick-dots {
   }
 }
 
-.comments{
+.comments {
   display: flex;
   margin-bottom: 30px;
-  &:last-child{
+
+  &:last-child {
     margin-bottom: 90px;
+
     .comments__content {
       border-bottom: none;
       padding-bottom: 0;
     }
   }
-  &.comments--replied{
+
+  &.comments--replied {
     margin-left: 130px;
     border-bottom: 1px solid #e0e0e0;
-    .comments__content{
+
+    .comments__content {
       border-bottom: none;
     }
   }
-  &-title{
+
+  &-title {
     font-size: 24px;
     @extend %rubik-700;
     color: $accent;
     line-height: 1;
     margin: 60px 0;
   }
-  &__img{
+
+  &__img {
     width: 100px;
     height: 100px;
     object-fit: cover;
     margin-right: 30px;
   }
-  &__content{
+
+  &__content {
     padding-bottom: 25px;
     border-bottom: 1px solid #e0e0e0;
   }
-  &__content-top{
+
+  &__content-top {
     display: flex;
     justify-content: space-between;
     line-height: 1;
     margin-bottom: 20px;
   }
-  &__content-name{
+
+  &__content-name {
     @extend %rubik-700;
-    color: $accent; 
+    color: $accent;
   }
+
   &__content-text,
-  &__content-reply{
+  &__content-reply {
     color: #565872;
   }
-  &__content-text{
+
+  &__content-text {
     margin-bottom: 10px;
   }
-  &__content-reply{
+
+  &__content-reply {
     position: relative;
-    &::after{
+
+    &::after {
       content: '';
       width: 12px;
       height: 13px;
@@ -1991,19 +2008,21 @@ ul.slick-dots {
   }
 }
 
-.comments-form{
-  &__title{
+.comments-form {
+  &__title {
     color: $accent;
     font-size: 24px;
     @extend %rubik-700;
     margin-bottom: 45px;
   }
-  &__box-input{
+
+  &__box-input {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
   }
-  &__text-input{
+
+  &__text-input {
     max-width: 400px;
     width: 100%;
     border: 1px solid #e5e5e5;
@@ -2013,17 +2032,21 @@ ul.slick-dots {
     position: relative;
     background-repeat: no-repeat;
     background-position: right 20px center;
-    &:focus{
+
+    &:focus {
       border: 1px solid $btn;
     }
-    &--user{
+
+    &--user {
       background-image: url(../images/icons/blog-user.svg);
     }
-    &--mail{
+
+    &--mail {
       background-image: url(../images/icons/sms-blog.svg);
     }
   }
-  &__textarea{
+
+  &__textarea {
     width: 100%;
     resize: none;
     padding: 5px 20px;
@@ -2033,20 +2056,170 @@ ul.slick-dots {
     background-image: url(../images/icons/text-blog.svg);
     background-repeat: no-repeat;
     background-position: right 20px top 20px;
-    &:focus{
+
+    &:focus {
       outline: none;
       border: 1px solid $btn;
     }
   }
-  &__btn{
+
+  &__btn {
     text-transform: uppercase;
     line-height: 1;
     padding: 15px 30px;
     background-color: $btn;
     border: none;
     color: #fff;
+    cursor: pointer;
   }
 }
 
+.contact {
+  padding: 120px 0;
+
+  &__subtitle {
+    color: $btn;
+    @extend %poppins-700;
+    text-align: center;
+  }
+
+  &__title {
+    color: $accent;
+    @extend %dmsans-700;
+    font-size: 35px;
+    line-height: 57px;
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  ul.contact__info-list {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 120px;
+  }
+
+  &__info-item {
+    padding: 70px 0;
+    max-width: 370px;
+    width: 100%;
+
+    &:hover {
+      border: 1px solid $btn;
+
+      .contact__info-icon {
+        background-color: $btn;
+      }
+
+      svg {
+        .cls-1 {
+          fill: #fff;
+        }
+      }
+    }
+  }
+
+  &__info-icon {
+    width: 80px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    box-shadow: 0px 6px 57px 0px rgba(37, 37, 37, 0.05);
+    border-radius: 20px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
+
+  &__info-title {
+    color: #222;
+    font-size: 20px;
+    @extend %dmsans-700;
+    text-align: center;
+    padding-bottom: 15px;
+  }
+
+  &__info-text {
+    color: #565872;
+    text-align: center;
+
+    a {
+      color: inherit;
+    }
+  }
+
+  &__box {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.contact-form {
+  max-width: 620px;
+  width: 100%;
+  &__box-input {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+
+  &__text-input {
+    max-width: 300px;
+    width: 100%;
+    border: none;
+    background-color: #fafafa;
+    padding: 9px 20px;
+    position: relative;
+    background-repeat: no-repeat;
+    background-position: right 20px center;
+    color: #565872;
+    &::placeholder{
+      text-transform: uppercase;
+      
+    }
+
+    &--user {
+      background-image: url(../images/icons/blog-user.svg);
+    }
+
+    &--mail {
+      background-image: url(../images/icons/sms-blog.svg);
+    }
+  }
+
+  &__textarea {
+    width: 100%;
+    resize: none;
+    padding: 9px 20px;
+    border: none;
+    background-color: #fafafa;
+    height: 175px;
+    margin-bottom: 30px;
+    background-image: url(../images/icons/text-blog.svg);
+    background-repeat: no-repeat;
+    background-position: right 20px top 20px;
+    color: #565872;
+    &::placeholder{
+      text-transform: uppercase; 
+    }
+  }
+
+  &__btn {
+    text-transform: uppercase;
+    line-height: 1;
+    padding: 15px 30px;
+    background-color: $btn;
+    border: none;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+}
+
+#map {
+  max-width: 500px;
+  width: 100%;
+  height: 335px;
+}
 
 @import 'media';
